WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146146
Fix the Windows build after
r185721
https://bugs.webkit.org/show_bug.cgi?id=146146
Summary
Fix the Windows build after r185721
Csaba Osztrogonác
Reported
2015-06-19 01:29:16 PDT
https://trac.webkit.org/changeset/185721
broke the WinCairo build:
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/46563
..\..\win\DumpRenderTree.cpp(1372): error C2259: 'UIDelegate' : cannot instantiate abstract class [C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\Tools\DumpRenderTree\DumpRenderTree.vcxproj\DumpRenderTree\DumpRenderTree.vcxproj] due to following members: 'HRESULT IWebUIDelegatePrivate::unused4(void)' : is abstract C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\WebKitBuild\Release_WinCairo\Include\WebKit/WebKit.h(33580) : see declaration of 'IWebUIDelegatePrivate::unused4'
Attachments
Patch
(1.65 KB, patch)
2015-06-19 05:42 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-06-19 01:36:18 PDT
Not only the WinCairo build, but Apple Windows build is broken too:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/70926
But unfortunately you weren't able to notice it before landing, because Windows EWS is broken a week ago.
peavo
Comment 2
2015-06-19 04:58:37 PDT
I had the same problem as the Windows EWS locally, I had to run the command cpan LWP::Protocol::https from the shell.
peavo
Comment 3
2015-06-19 05:42:50 PDT
Created
attachment 255188
[details]
Patch
Csaba Osztrogonác
Comment 4
2015-06-19 05:45:37 PDT
Comment on
attachment 255188
[details]
Patch rs=me
peavo
Comment 5
2015-06-19 05:46:14 PDT
(In reply to
comment #4
)
> Comment on
attachment 255188
[details]
> Patch > > rs=me
Thanks!
WebKit Commit Bot
Comment 6
2015-06-19 06:32:35 PDT
Comment on
attachment 255188
[details]
Patch Clearing flags on attachment: 255188 Committed
r185747
: <
http://trac.webkit.org/changeset/185747
>
WebKit Commit Bot
Comment 7
2015-06-19 06:32:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug