Fix the Windows build after r185721 https://bugs.webkit.org/show_bug.cgi?id=146146

Reviewed by Csaba Osztrogonác.

Speculative buildfix.

* DumpRenderTree/win/UIDelegate.h:
(UIDelegate::unused4): Added.
(UIDelegate::webViewShouldInterruptJavaScript): Deleted.


Canonical link: https://commits.webkit.org/164190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185747 268f45cc-cd09-0410-ab3c-d52691b4dbfc